Webpage aligned and with background

--- a/main.html
+++ b/main.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Simple Website</h1>
-<p>Hello! This is a paragraph. It's just a text field.</p>
+<p>Hello! This is a paragraph. It's just a text field + aligned and background color added (see in css)</p>
 </body>
 </html>
